[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["vlad <malosay21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
coverage = "^6.5.0"
httpx = "^0.23.0"
pytest-asyncio = "^0.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
